--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 						sentenceTemplate = randomSentenceObject.sentence;
 					} else {
 						// If noNarrative is set to true, keep the original message template
-						sentenceTemplate = sentencesFile;
+						sentenceTemplate = "";
 					}
 
 					// Replace placeholders in the sentence template
