--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 			async function composeMessage(sentencesFile, weatherDescription, timeOfDay, name, partMoving, directionMoving) {
 				try {
 					let sentenceTemplate;
-					if (noNarrative) {
+					if (!noNarrative) {
 						// Read sentences from JSON file
 						const sentences = await fetchJSONFile(sentencesFile);
 						if (!sentences || !Array.isArray(sentences) || sentences.length === 0) {
