--- a/index.html
+++ b/index.html
@@ -727,6 +727,7 @@
 			let speaking = false;
 
 			function speakMessage(fullMessage) {
+			console.log("Starting speakingMessage");
 			// Check if the message is the same as the last spoken message
 				if (fullMessage === lastSpokenMessage) {
 					console.log("Message already spoken.");
