--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 		<script>
 			var latitude;
 			var longitude;
+			let speed;
 			function getCurrentLocation() {
 				if (navigator.geolocation) {
 					const options = {
@@ -114,7 +115,7 @@
 							longitude = position.coords.longitude; // Store longitude globally
 							console.log("Location is longitude: " + longitude + " latitude: "+ latitude );
 							const speedThreshold = 0.5; // Threshold for considering the user as significantly moving (in meters per second)
-							let speed = position.coords.speed || 0; // Speed in meters per second
+							speed = position.coords.speed || 0; // Speed in meters per second
 							// Reset total distance if speed is less than threshold
 							if (speed < speedThreshold) {
 								totalDistance = 0;
