--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
 				}
 			}
 
-			var noNarrative = true;
+			var noNarrative;
 			function readTag() {
 				if (tagID === "12") {
 					noNarrative = false;
