--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
 					console.error("Processing sketch not initialized.");
 				}
 			}
+
+			function checkVariables() {
+				// Check if latitude, longitude, and weatherDescription are not null
+				if (latitude !== null && longitude !== null && weatherDescription !== null) {
+					console.log("All variables are not null. OK");
+					displayText("Location and weather information are ready");
+				} else {
+					// If any variable is still null, wait for a short delay and check again
+					setTimeout(checkVariables, 1000); // Adjust delay as needed (here 1000 milliseconds or 1 second)
+				}
+			}
+
+			// Call the function when the script is loaded
+			window.onload = checkVariables;
 		</script>
 		<script>
 			var latitude;
