--- a/index.html
+++ b/index.html
@@ -670,6 +670,7 @@
 						} else {
 							timeoutID = setTimeout(timeoutCallback, 1000); // Check again after 1 second
 						}
+						console.log(speaking);
 					};
 
 					timeoutID = setTimeout(timeoutCallback, 3000);
