--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h1>Avatar BT Debug</h1>
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
-			<button id="connectButton" class="button">Connect to Avatar</button>
+			<button id="connectButton" class="button" disabled>Connect to Avatar</button>
 			<!-- Find Closest Shop Button -->
 			<button id="findClosestShopButton" class="button" onclick="findClosestShop()">Find Closest Shop</button>
 		</div>
@@ -100,8 +100,8 @@
 			function checkVariables() {
 				// Check if latitude, longitude, and weatherDescription are not null
 				if (latitude !== null && longitude !== null && weatherDescription !== null) {
-					displayText("Ready to connect Avatar BT {speed}");
-					findClosestShopButton.click();
+					connectButton.disabled = false;
+					displayText("Ready to connect to Avatar BT");
 				} else {
 					// If any variable is still null, wait for a short delay and check again
 					setTimeout(checkVariables, 1000); // Adjust delay as needed (here 1000 milliseconds or 1 second)
