--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<!-- Connect Button. -->
 			<button id="connectButton" class="button" disabled>Connect to Avatar</button>
 			<!-- Find Closest Shop Button -->
-			<button id="findClosestShopButton" class="button" onclick="findClosestShop()">Find Closest Shop</button>
+			<button id="findClosestShopButton" class="button" onclick="findClosestShop()" disabled>Find Closest Shop</button>
 		</div>
 		<!-- Div to display status of Avatar BT shop -->
 		<div id="closestShop"></div>
