--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 				// Check if latitude, longitude, and weatherDescription are not null
 				if (latitude !== null && longitude !== null && weatherDescription !== null) {
 					connectButton.disabled = false;
+					findClosestShopButton.disabled = false;
 					displayText("Ready to connect to Avatar BT");
 				} else {
 					// If any variable is still null, wait for a short delay and check again
