--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				if (latitude !== null && longitude !== null && weatherDescription !== null) {
 					connectButton.disabled = false;
 					findClosestShopButton.disabled = false;
-					displayText("Ready to connect to Avatar BT");
+					//displayText("Ready to connect to Avatar BT");
 				} else {
 					// If any variable is still null, wait for a short delay and check again
 					setTimeout(checkVariables, 1000); // Adjust delay as needed (here 1000 milliseconds or 1 second)
