--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 					console.log("Already speaking, new message ignored.");
 					return;
 				}
-				speaking = true;
+				//speaking = true;
 				// Create a new instance of SpeechSynthesisUtterance.
 				const utterance = new SpeechSynthesisUtterance(fullMessage);
 				// Filter available voices to find Karen's voice in Australian English
