Message display working. Everything works.

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 						displayText("{partMoving} is {directionMoving}");
 					}
 				}
-				// Update previous potentiometer values for the next iteration
+				// Update previous potentiometer values for the next iteration.
 				previousPotValues = potValues.slice(0, numPotentiometers);
 			}
 
